# Glean

./: .env.example  .gitignore  README.md  pyproject.toml
src/glean_folder_ingest/: __init__.py  cli.py  config.py  documents.py  glean_client.py  ingest.py  streamlit_app.py
tests/: test_config.py  test_documents.py  test_glean_client.py
